# forest_fire_prediction

./: .gitignore  README.md  forest_fire_prediction.ipynb  forest_fire_prediction.py  pyproject.toml  readme.md
